# DataGenius-Platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  constraints.txt  docker-compose.yml  environment.yml  pyproject.toml  requirements-full.txt  requirements.txt  start.py  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
backend/: __init__.py  ai_integration.py  app.py  async_ml_trainer.py  auto_prep.py  baselines.py  cache_manager.py  contracts.py  data_contracts.py  data_processing.py  drift.py  drift_detection.py  dtype_sanitizer.py  eda_integration.py  eda_integration_safe.py  eda_shap_utils.py  encoders.py  ensembles.py  error_handler.py  explain_plus.py  export_everything.py  export_explain_pdf.py  export_plus.py  exporters.py  fairness.py  feature_importance_utils.py  feature_store.py  fi_plus.py  file_upload.py  ge_gated.py  guardrails.py  hpo_optuna.py  io_readers.py  large_mode.py  main.py  metrics_helper.py  ml_explain.py  ml_integration.py  mlflow_gated.py  model_export_utils.py  (+25 more)
backend/api/: v3_endpoints.py
backend/explainability/: __init__.py  fairness_checker.py  lime_explainer.py  shap_explainer.py  whatif_analyzer.py
backend/feature_engineering/: __init__.py  auto_features.py  feature_selector.py  feature_store.py
backend/helpers/: targeting.py
cli/: tmiv_cli.py
config/: env.template  logging.yaml  settings.py
core/: __init__.py  adapters.py  container.py  interfaces.py  services.py
data/: README.md  __init__.py  avocado.csv
db/: db_utils.py  schema.sql
docs/: API_INTERNALS.md  ARCHITECTURE.md  README.md  UX_GUIDE.md  V3_FEATURES.md
eda/: profile.py
frontend/: __init__.py  brand.py  global.css  styles.css  ui_compare.py  ui_components.py  ui_docs.py  ui_panels.py  ui_panels_explain.py
ml/: calibration.py  explain.py  fi.py  training.py  utils.py
qa/: conftest.py
scripts/: build_sbom.py  cleanup.py  export_demo.sh  export_zip.py  gen_licenses.py  make_pdf.py  save_plots.py  sbom.py  seed_data.py
tests/: test_pipeline_smoke.py
(+46 files in other folders)
