[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tmiv-advanced-ml-platform"
version = "2.0.0"
description = "The Most Important Variables – Advanced ML Platform v2.0 Pro (skeleton)"
readme = "docs/README.md"
requires-python = ">=3.11"
# Runtime dependencies trzymamy w requirements.txt (CI i lokalnie).
# Jeśli chcesz przenieść je tutaj, daj znać — przygotuję sekcję [project.dependencies].

authors = [
  { name = "TMIV Team" }
]
keywords = ["streamlit", "machine-learning", "auto-ml", "explainability", "eda"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.9",
  "isort>=5.13.2",
  "pytest>=8.2",
  "mypy>=1.11",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false
extend-exclude = """
(
  ^cache/
| ^exports/
| ^data/
| __pycache__
)
"""

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend", "core", "frontend", "ml"]
skip = ["cache", "exports", "data"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]
extend-exclude = ["cache", "exports", "data", "**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
  "E203",  # zgodność z Black przy operatorach slicing
]
fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["qa/tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = '(cache/|exports/|data/)'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend", "core", "frontend", "ml"]
